--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
   <title>Call Hero - Guaranteed 100% Answer Rate For Plumbers</title>
   <link rel="icon" type="image/png" href="favicon-2.png" />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap" rel="stylesheet">
+  <iframe 
+    id="calendlyPreload" 
+    src="https://calendly.com/YOUR_LINK" 
+    style="display:none;" 
+    loading="eager">
+  </iframe>
   <style>
     body {
       margin: 0;
@@ -20,7 +26,7 @@
       max-width: 280px;
       height: auto;
       margin-bottom: 15px;
-      margin-bottom: 15px;
+      margin-bottom: 7px;
     }
 
     h1 {
@@ -104,7 +110,7 @@
 <body>
   <header>
     <img id="logo" src="call-hero-site-logo-2.png" alt="Call Hero Logo"/>
-    <h1>Hi John, I made this video for you:</h1>
+    <h1>Your Call Answering System Is Broken — Here’s The Fix:</h1>
   </header>
 
   <div id="video-wrapper">
@@ -118,7 +124,7 @@
   </div>
 
   <button id="cta-button">Request Your Zero Risk Free Trial</button>
-  <p id="cta-subtext">$0 Dollars, 0 Set-Up Time, Only Missed Calls Answered.</p>
+  <p id="cta-subtext">No Cost. No Setup Time. We Only Answer Calls You’d Miss.</p>
 
   <div id="calendly">
     <iframe src="https://calendly.com/anthonydecaro2005/30min" loading="lazy"></iframe>
@@ -164,6 +170,7 @@
   </script>
 </body>
 </html>
+
 
 
 
