--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       max-width: 280px;
       height: auto;
       margin-bottom: 15px;
-      margin-bottom: 7px;
+      margin-bottom: 15px;
     }
 
     h1 {
@@ -110,7 +110,7 @@
 <body>
   <header>
     <img id="logo" src="call-hero-site-logo-2.png" alt="Call Hero Logo"/>
-    <h1>Your Call Answering System Is Broken — Here’s The Fix:</h1>
+    <h1>You’re Losing $80K/Year to Missed Calls — Here’s the Fix</h1>
   </header>
 
   <div id="video-wrapper">
@@ -123,8 +123,8 @@
     </div>
   </div>
 
-  <button id="cta-button">Request Your Zero Risk Free Trial</button>
-  <p id="cta-subtext">No Cost. No Setup Time. We Only Answer Calls You’d Miss.</p>
+  <button id="cta-button">Quick Setup Call — Free Trial Included</button>
+  <p id="cta-subtext">You won’t need to do anything — I’ll show you how it’s all done.</p>
 
   <div id="calendly">
     <iframe src="https://calendly.com/anthonydecaro2005/30min" loading="lazy"></iframe>
@@ -170,6 +170,7 @@
   </script>
 </body>
 </html>
+
 
 
 
