--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@
     </div>
   </div>
 
-  <button id="cta-button">Quick Setup Call — Free Trial Included</button>
-  <p id="cta-subtext">You won’t need to do anything — I’ll show you how it’s all done.</p>
+  <button id="cta-button">Start My Free Trial Call</button>
+  <p id="cta-subtext">10 Minute Call: No Card. No Setup Time. No Missed Calls.</p>
 
   <div id="calendly">
     <iframe src="https://calendly.com/anthonydecaro2005/30min" loading="lazy"></iframe>
@@ -170,6 +170,7 @@
   </script>
 </body>
 </html>
+
 
 
 
