--- a/index.html
+++ b/index.html
@@ -6,12 +6,6 @@
   <title>Call Hero - Guaranteed 100% Answer Rate For Plumbers</title>
   <link rel="icon" type="image/png" href="favicon-2.png" />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap" rel="stylesheet">
-  <iframe 
-    id="calendlyPreload" 
-    src="https://calendly.com/YOUR_LINK" 
-    style="display:none;" 
-    loading="eager">
-  </iframe>
   <style>
     body {
       margin: 0;
@@ -108,9 +102,15 @@
   </style>
 </head>
 <body>
+  <iframe 
+    id="calendlyPreload" 
+    src="https://calendly.com/anthonydecaro2005/30min" 
+    style="display:none;" 
+    loading="eager">
+  </iframe>
   <header>
     <img id="logo" src="call-hero-site-logo-2.png" alt="Call Hero Logo"/>
-    <h1>You’re Losing $80K/Year to Missed Calls — Here’s the Fix</h1>
+    <h1>You’re Losing $80K/Year to Missed Calls — Here’s the Fix:</h1>
   </header>
 
   <div id="video-wrapper">
@@ -124,11 +124,9 @@
   </div>
 
   <button id="cta-button">Start My Free Trial Call</button>
-  <p id="cta-subtext">10 Minute Call: No Card. No Setup Time. No Missed Calls.</p>
+  <p id="cta-subtext">No Card. No Setup Time. No Missed Calls.</p>
 
-  <div id="calendly">
-    <iframe src="https://calendly.com/anthonydecaro2005/30min" loading="lazy"></iframe>
-  </div>
+  <div id="calendly"></div>
 
   <script>
     const video = document.getElementById('hero-video');
@@ -136,6 +134,15 @@
     const cta = document.getElementById('cta-button');
     const subtext = document.getElementById('cta-subtext');
     const calendly = document.getElementById('calendly');
+
+    // Delay Calendly preload until after page load (2s), before CTA appears
+    window.addEventListener('load', () => {
+      setTimeout(() => {
+        const preloadIframe = document.getElementById('calendlyPreload');
+        // reassigning src ensures the browser begins loading it now
+        preloadIframe.src = preloadIframe.src;
+      }, 2000);
+    });
 
     video.addEventListener('canplay', () => {
       overlay.style.display = 'block';
@@ -164,16 +171,12 @@
     }, 10000);
 
     cta.addEventListener('click', () => {
-      calendly.style.display = 'block';
+      // move the preloaded iframe into view and show it
+      const preloadIframe = document.getElementById('calendlyPreload');
+      calendly.appendChild(preloadIframe);
+      preloadIframe.style.display = 'block';
       calendly.scrollIntoView({ behavior: 'smooth' });
     });
   </script>
 </body>
 </html>
-
-
-
-
-
-
-
