--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     #video-wrapper {
       display: flex;
       justify-content: center;
-      margin: 45px 45px;
+      margin: 0 auto;
     }
 
     #video-container {
@@ -88,9 +88,10 @@
 
     #calendly {
       display: none;
+      justify-content: center;
       margin-top: 10px;
       max-width: 60%;
-      margin: 45px 45px;
+      margin: 0 auto;
     }
 
     iframe {
@@ -114,8 +115,6 @@
       #video-wrapper {
         margin-top: 15px;
         margin-bottom: 15px;
-        margin-left: 8px;
-        margin-right: 8px;
       }
     
       #video-container {
@@ -145,8 +144,6 @@
         width: 100%;
         margin-top: 20px;
         margin-bottom: 40px;
-        margin-left: 8px;
-        margin-right: 8px;
       }
     
       iframe {
@@ -246,6 +243,7 @@
   </script>
 </body>
 </html>
+
 
 
 
