--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
     #video-wrapper {
       display: flex;
       justify-content: center;
+      magrin-top: 45px;
+      margin-bottom: 45px;
       margin: 0 auto;
     }
 
@@ -243,6 +245,7 @@
   </script>
 </body>
 </html>
+
 
 
 
