--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     #video-wrapper {
       display: flex;
       justify-content: center;
-      magrin-top: 45px;
+      margin-top: 45px;
       margin-bottom: 45px;
       margin: 0 auto;
     }
@@ -245,6 +245,7 @@
   </script>
 </body>
 </html>
+
 
 
 
