--- a/index.html
+++ b/index.html
@@ -32,9 +32,7 @@
     #video-wrapper {
       display: flex;
       justify-content: center;
-      margin-top: 45px;
-      margin-bottom: 45px;
-      margin: 0 auto;
+      margin: 45px auto
     }
 
     #video-container {
@@ -245,6 +243,7 @@
   </script>
 </body>
 </html>
+
 
 
 
