--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 
   <div id="video-wrapper">
     <div id="video-container">
-      <video id="hero-video" muted playsinline preload="none" controls>
+      <video id="hero-video" muted playsinline preload="auto" controls>
         <source src="video.mp4" type="video/mp4" />
         Your browser does not support the video tag.
       </video>
@@ -185,8 +185,8 @@
     const subtext = document.getElementById('cta-subtext');
     const calendly = document.getElementById('calendly');
 
-    // Show unmute overlay once video can play
-    video.addEventListener('canplay', () => {
+    // Show overlay immediately
+    document.addEventListener('DOMContentLoaded', () => {
       overlay.style.display = 'block';
     });
 
