--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Call Hero - Guaranteed 100% Answer Rate For Plumbers</title>
-  <link rel="icon" type="image/png" href="BASE Favicon.png" />
+  <link rel="icon" type="image/png" href="favicon-2.png" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap" rel="stylesheet">
   <style>
@@ -163,7 +163,7 @@
   <!-- No Calendly preload -->
 
   <header>
-    <img id="logo" src="BASE Logo.png" alt="Call Hero Logo"/>
+    <img id="logo" src="call-hero-site-logo-2.png" alt="Call Hero Logo"/>
     <h1>You’re Losing $80K/Year to Missed Calls — Here’s the Fix:</h1>
   </header>
 
@@ -259,3 +259,6 @@
   </script>
 </body>
 </html>
+
+
+
